--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "html-animation-boilerplate",
   "version": "1.0.0",
-  "description": "Simple boilerplate for developing GSAP/CSS3 animations. With livereload server, polite loading and SASS preprocessing.",
+  "description": "Simple boilerplate for developing GSAP/CSS3 animations. With polite loading, gsap dependecies, gulp watch server and sass preprocessing.",
   "devDependencies": {
     "gulp": "^3.9.0",
     "gulp-connect": "^3.2.0",
